--- a/Video Capture DonK/Video Capture DonK.csproj
+++ b/Video Capture DonK/Video Capture DonK.csproj
@@ -115,15 +115,14 @@
     <None Include="Resources\record.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\stop2.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\pause.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="capture.ico" />
     <None Include="Resources\droplist.png" />
     <Content Include="donk.png" />
+    <None Include="Resources\notes.png" />
+    <Content Include="Resources\recording.png" />
     <Content Include="Resources\shutdown.png" />
     <None Include="Resources\play.png" />
     <None Include="Resources\background.png" />
