--- a/Video Capture DonK/Video Capture DonK.csproj
+++ b/Video Capture DonK/Video Capture DonK.csproj
@@ -112,6 +112,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="README.md" />
     <None Include="Resources\record.png" />
   </ItemGroup>
   <ItemGroup>
