--- a/Video Capture DonK/packages.config
+++ b/Video Capture DonK/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net48" />
   <package id="Fody" version="6.0.0" targetFramework="net48" developmentDependency="true" />
+  <package id="NAudio" version="1.10.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="SharpAvi" version="2.1.2" targetFramework="net48" />
 </packages>
